  osd/PGLog: add the missed case if there is only one divergent entry   Fixes: http://tracker.ceph.com/issues/16279

Signed-off-by: huangjun <hjwsm1989@gmail.com>